--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMCHadwlB1TKhi7v1CqAysC",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CaretJuice/extract-ga4-event-params-bigquery/blob/main/extract_ga4_event_params_bigquery.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,18 +12,28 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Variables\n",
-        "\n",
-        "source_project = 'caret-juice-ss'\n",
-        "source_dataset = 'analytics_265010215'\n",
-        "source_table = 'events_intraday_20240205'"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "2nfjNrwm4HBc"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Variables\n",
+        "spreadsheet = ''  # using the connect by URL method so put the full URL of the sheet that you are using\n",
+        "source_project = ''\n",
+        "source_dataset = ''\n",
+        "source_table = ''\n",
+        "\n",
+        "# string of parameter names formatted to go in a WHERE event_parameter.key NOT IN ('language','page_location')\n",
+        "# intent of this sheet is to surface custom parameters so excluding more than Google's officially documented list of default parameters\n",
+        "# https://support.google.com/analytics/answer/9234069?hl=en&ref_topic=13367566&sjid=4176436952221836768-NC\n",
+        "# leave empty string to select all parameters\n",
+        "parameters_to_exclude = \"\"\"\n",
+        "  'language', 'page_location', 'page_referrer', 'page_title', 'screen_resolution', 'engagement_time_msec', \n",
+        "  'source', 'medium', 'campaign', 'batch_ordering_id', 'ga_session_number', 'ga_session_id', 'page_title', \n",
+        "  'screen_name', 'session_engaged', 'debug_mode', 'ignore_referrer', 'batch_page_id', 'engaged_session_event'\n",
+        "\"\"\""
+      ]
     },
     {
       "cell_type": "code",
@@ -53,8 +47,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Authenticated\n",
             "The google.colab.data_table extension is already loaded. To reload it, use:\n",
@@ -66,60 +60,28 @@
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "print('Authenticated')\n",
-        "%load_ext google.colab.data_table"
+        "%load_ext google.colab.data_table\n",
+        "\n",
+        "\n",
+        "import gspread\n",
+        "from google.auth import default\n",
+        "creds, _ = default()\n",
+        "\n",
+        "gc = gspread.authorize(creds)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.cloud import bigquery\n",
-        "\n",
-        "client = bigquery.Client(project=source_project)\n",
-        "\n",
-        "events = client.query('''\n",
-        "  select distinct\n",
-        "    event_name\n",
-        "  from {sp}.{sd}.{st} '''.format(sp=source_project, sd=source_dataset, st=source_table) ).result()\n",
-        "\n",
-        "event_list=[]\n",
-        "for event in events:\n",
-        "  event_list.append(event[0])\n",
-        "event_list"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oJHZ0rFv3_zB",
-        "outputId": "acbce15a-cc1a-4c7d-9bff-7e5acfeb8eb1"
-      },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['first_visit',\n",
-              " 'session_start',\n",
-              " 'form_start',\n",
-              " 'form_submit',\n",
-              " 'user_engagement']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
+      "metadata": {
+        "id": "x49Xv4lXYHXa"
+      },
+      "outputs": [],
       "source": [
-        "event_params = {}\n",
-        "\n",
-        "for event in event_list:\n",
-        "  event_params[event] = client.query('''\n",
+        "event_params = client.query('''\n",
         "    select\n",
-        "      ep.key\n",
+        "      event_name\n",
+        "      , ep.key\n",
         "      , count(ep.value.string_value) as string_values\n",
         "      , count(ep.value.int_value) as int_values\n",
         "      , count(ep.value.float_value) as float_values\n",
@@ -127,25 +89,28 @@
         "    from {sp}.{sd}.{st}\n",
         "    cross join\n",
         "      unnest(event_params) ep\n",
-        "    where event_name = '{en}'\n",
-        "    group by ep.key;\n",
-        "    '''.format(sp=source_project, sd=source_dataset, st=source_table, en=event) ).to_dataframe()\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "x49Xv4lXYHXa"
-      },
-      "execution_count": null,
-      "outputs": []
+        "    where ep.key not in ({pe})\n",
+        "    group by event_name, ep.key\n",
+        "    union all\n",
+        "    select\n",
+        "      'user_property' as event_name\n",
+        "      , up.key\n",
+        "      , count(up.value.string_value) as string_values\n",
+        "      , count(up.value.int_value) as int_values\n",
+        "      , count(up.value.float_value) as float_values\n",
+        "      , count(up.value.double_value) as double_values\n",
+        "    from {sp}.{sd}.{st}\n",
+        "    cross join\n",
+        "      unnest(user_properties) up\n",
+        "    group by event_name, up.key\n",
+        "  '''.format(sp=source_project, sd=source_dataset, st=source_table, pe=parameters_to_exclude)).to_dataframe()\n",
+        "\n",
+        "event_params"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for event in event_list:\n",
-        "  print (event +'\\n')\n",
-        "  print (event_params[event])\n",
-        "  print ('\\n')"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,11 +118,10 @@
         "id": "qkIxsY8rfcsQ",
         "outputId": "68f84d15-7ba8-4213-e0cf-cc5996a8083e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "first_visit\n",
             "\n",
@@ -267,7 +231,35 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "from gspread_dataframe import set_with_dataframe\n",
+        "\n",
+        "ss = gc.open_by_url(spreadsheet)\n",
+        "try:\n",
+        "    ws = ss.worksheet(source_dataset)\n",
+        "except:\n",
+        "    ws = ss.add_worksheet(title=source_dataset, rows='1', cols ='1')\n",
+        "set_with_dataframe(ws, event_params )\n",
+        "#restore the header text\n",
+        "ws.update('A1', source_dataset)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMCHadwlB1TKhi7v1CqAysC",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
