--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMTOM5kVr5gAiNZOTlttkK",
+      "authorship_tag": "ABX9TyNeBGUiPCSPjBoG40ylQkW7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,9 @@
       "source": [
         "# Variables\n",
         "\n",
-        "source_project = 'caret-juice-ss'\n",
-        "source_dataset = 'analytics_265010215'\n",
-        "source_table = 'events_intraday_20240205'\n",
+        "source_project = ''\n",
+        "source_dataset = ''\n",
+        "source_table = ''\n",
         "\n",
         "# In what percentage of events does an event parameter need to be found to be\n",
         "# considered a universal event parameter. In other words, what parameters should\n",
