--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNeBGUiPCSPjBoG40ylQkW7",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/CaretJuice/extract-ga4-event-params-bigquery/blob/main/extract_ga4_event_params_bigquery.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2nfjNrwm4HBc"
+      },
+      "outputs": [],
       "source": [
         "# Variables\n",
         "\n",
@@ -38,13 +27,17 @@
         "# In what percentage of events does an event parameter need to be found to be\n",
         "# considered a universal event parameter. In other words, what parameters should\n",
         "# be configured for all events.\n",
-        "threshold = 0.5"
-      ],
-      "metadata": {
-        "id": "2nfjNrwm4HBc"
-      },
-      "execution_count": null,
-      "outputs": []
+        "threshold = 0.7\n",
+        "\n",
+        "# Exclude standard event parameters\n",
+        "exclude_parameters = []\n",
+        "# comment out the below line to not exclude any parameters\n",
+        "exclude_parameters = ['page_title', 'batch_ordering_id', 'engaged_session_event', 'batch_page_id', 'page_location', \n",
+        "                      'ignore_referrer', 'gtm_container_id', 'engagement_time_msec', 'gtm_container_version', 'page_referrer', \n",
+        "                      'session_engaged', 'gtm_debug_mode', 'ga_session_number' , 'ga_session_id', 'medium', 'term', 'campaign', \n",
+        "                      'source', 'gclid', 'gclsrc', 'gtm_environment', 'debug_mode']\n",
+        "exclude_parameters = ', '.join(exclude_parameters)"
+      ]
     },
     {
       "cell_type": "code",
@@ -62,6 +55,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oJHZ0rFv3_zB"
+      },
+      "outputs": [],
       "source": [
         "from google.cloud import bigquery\n",
         "\n",
@@ -76,33 +74,35 @@
         "for event in events:\n",
         "  event_list.append(event[0])\n",
         "event_list"
-      ],
-      "metadata": {
-        "id": "oJHZ0rFv3_zB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x49Xv4lXYHXa"
+      },
+      "outputs": [],
       "source": [
         "# Dictionary of dataframes\n",
         "event_params = {}\n",
         "\n",
         "for event in event_list:\n",
+        "  exclude_list = [f\"'{param}'\" for param in exclude_parameters.split(', ')] \n",
         "  event_params[event] = client.query('''\n",
         "    select\n",
         "      ep.key\n",
-        "      , count(ep.value.string_value) as string_values\n",
-        "      , count(ep.value.int_value) as int_values\n",
-        "      , count(ep.value.float_value) as float_values\n",
-        "      , count(ep.value.double_value) as double_values\n",
+        "      , count(case when ep.value.string_value is not null then ep.value.string_value end) as string_values\n",
+        "      , count(case when ep.value.int_value is not null then ep.value.int_value end) as int_values\n",
+        "      , count(case when ep.value.float_value is not null then ep.value.float_value end) as float_values\n",
+        "      , count(case when ep.value.double_value is not null then ep.value.double_value end) as double_values\n",
         "    from {sp}.{sd}.{st}\n",
         "    cross join\n",
         "      unnest(event_params) ep\n",
         "    where event_name = '{en}'\n",
+        "    and ep.key not in ({excl})\n",
         "    group by ep.key;\n",
-        "    '''.format(sp=source_project, sd=source_dataset, st=source_table, en=event) ).to_dataframe()\n",
+        "    '''.format(sp=source_project, sd=source_dataset, st=source_table, en=event, excl=', '.join(exclude_list)) ).to_dataframe()\n",
         "  event_params[event]['value_types'] = \"\"\n",
         "\n",
         "user_props = {}\n",
@@ -111,10 +111,10 @@
         "  user_props[event] = client.query('''\n",
         "    select\n",
         "      up.key\n",
-        "      , count(up.value.string_value) as string_values\n",
-        "      , count(up.value.int_value) as int_values\n",
-        "      , count(up.value.float_value) as float_values\n",
-        "      , count(up.value.double_value) as double_values\n",
+        "      , count(case when up.value.string_value is not null then up.value.string_value end) as string_values\n",
+        "      , count(case when up.value.int_value is not null then up.value.int_value end) as int_values\n",
+        "      , count(case when up.value.float_value is not null then up.value.float_value end) as float_values\n",
+        "      , count(case when up.value.double_value is not null then up.value.double_value end) as double_values\n",
         "    from {sp}.{sd}.{st}\n",
         "    cross join\n",
         "      unnest(user_properties) up\n",
@@ -123,26 +123,26 @@
         "    '''.format(sp=source_project, sd=source_dataset, st=source_table, en=event) ).to_dataframe()\n",
         "  user_props[event]['value_types'] = \"\"\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "x49Xv4lXYHXa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "event_params['first_visit'].key\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "A6Orwdp_ntCx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "event_params['first_visit'].key\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qkIxsY8rfcsQ"
+      },
+      "outputs": [],
       "source": [
         "# warn_params is a list of event and event parameter names that have more than\n",
         "# one type of value\n",
@@ -173,8 +173,8 @@
         "      if row['double_values'] > 0:\n",
         "        matched_params.append('double_value')\n",
         "      if len(matched_params) > 1:\n",
-        "        warn_params.append( event + \": \" + param.key )\n",
-        "      event_params[event].loc[index, 'value_types'] = matched_params\n",
+        "        warn_params.append( event + \": \" + param )\n",
+        "      event_params[event].loc[index, 'value_types'] = ', '.join(matched_params)\n",
         "\n",
         "      param_set.add(row.key)\n",
         "      if row['key'] not in parameter_occurrences:\n",
@@ -200,51 +200,65 @@
         "      if row['double_values'] > 0:\n",
         "        matched_params.append('double_value')\n",
         "      if len(matched_params) > 1:\n",
-        "        warn_props.append( event + \": \" + param.key )\n",
-        "      user_props[event].loc[index, 'value_types'] = matched_params\n",
+        "        warn_props.append( event + \": \" + param )\n",
+        "      user_props[event].loc[index, 'value_types'] = ', '.join(matched_params)\n",
         "\n",
         "      prop_set.add(row.key)\n"
-      ],
-      "metadata": {
-        "id": "qkIxsY8rfcsQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "NoEHBbNihR0g"
+      },
+      "outputs": [],
       "source": [
         "#\n",
         "\n",
         "if len(warn_params) > 0:\n",
         "  print( \"The following event parameters have more than one value type: \\n\" )\n",
-        "  print(warn_params + '\\n\\n')\n",
+        "  print('\\n'.join(warn_params) + '\\n\\n')\n",
         "\n",
         "print( \"The following event parameters appear in at least \" + format(threshold, \".0%\") + \" of events. Consider implementing these as default custom parameters. \\n\" )\n",
         "print( \"Please note that the parameters that are implemented by default in GA4 on all events, like page_location, are not removed from this list. \\n\" )\n",
         "print( \"You do not need to register default parameters. \\n\" )\n",
-        "print(' '.join(universal_params) + '\\n\\n')\n",
+        "print('\\n '.join(universal_params) + '\\n\\n')\n",
         "\n",
         "print( \"These are the event parameters by event: \\n\" )\n",
         "for event in event_list:\n",
         "  print (event +'\\n')\n",
-        "  print (event_params[event])\n",
+        "  print (event_params[event].loc[:, ['key','value_types']]) # Change is on this line\n",
         "  print ('\\n')\n",
         "\n",
         "if len(warn_props) > 0:\n",
         "  print( \"The following user properties have more than one value type: \\n\" )\n",
-        "  print(warn_props + '\\n\\n')\n",
+        "  print('\\n'.join(warn_props) + '\\n\\n')\n",
         "\n",
         "print( \"These are the user properties that appear in the data: \\n\" )\n",
-        "print(user_props + '\\n\\n')\n",
+        "for event in event_list:\n",
+        "  print (event +'\\n')\n",
+        "  print (user_props[event].loc[:, ['key','value_types']])\n",
+        "  print ('\\n')\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "NoEHBbNihR0g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNeBGUiPCSPjBoG40ylQkW7",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
