more updates and readme

--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -188,20 +188,20 @@
         "\n",
         "\n",
         "for event in event_list:\n",
-        "  for param in user_props[event].key:\n",
+        "  for prop in user_props[event].key:\n",
         "    for index, row in user_props[event].iterrows():\n",
         "      matched_props = []\n",
         "      if row['string_values'] > 0:\n",
-        "        matched_params.append('string_value')\n",
+        "        matched_props.append('string_value')\n",
         "      if row['int_values'] > 0:\n",
-        "        matched_params.append('int_value')\n",
+        "        matched_props.append('int_value')\n",
         "      if row['float_values'] > 0:\n",
-        "        matched_params.append('float_value')\n",
+        "        matched_props.append('float_value')\n",
         "      if row['double_values'] > 0:\n",
-        "        matched_params.append('double_value')\n",
-        "      if len(matched_params) > 1:\n",
-        "        warn_props.append( event + \": \" + param )\n",
-        "      user_props[event].loc[index, 'value_types'] = ', '.join(matched_params)\n",
+        "        matched_props.append('double_value')\n",
+        "      if len(matched_props) > 1:\n",
+        "        warn_props.append( event + \": \" + prop )\n",
+        "      user_props[event].loc[index, 'value_types'] = ', '.join(matched_props)\n",
         "\n",
         "      prop_set.add(row.key)\n"
       ]
@@ -214,12 +214,6 @@
       },
       "outputs": [],
       "source": [
-        "#\n",
-        "\n",
-        "if len(warn_params) > 0:\n",
-        "  print( \"The following event parameters have more than one value type: \\n\" )\n",
-        "  print('\\n'.join(warn_params) + '\\n\\n')\n",
-        "\n",
         "print( \"The following event parameters appear in at least \" + format(threshold, \".0%\") + \" of events. Consider implementing these as default custom parameters. \\n\" )\n",
         "print( \"Please note that the parameters that are implemented by default in GA4 on all events, like page_location, are not removed from this list. \\n\" )\n",
         "print( \"You do not need to register default parameters. \\n\" )\n",
@@ -231,15 +225,16 @@
         "  print (event_params[event].loc[:, ['key','value_types']]) # Change is on this line\n",
         "  print ('\\n')\n",
         "\n",
-        "if len(warn_props) > 0:\n",
-        "  print( \"The following user properties have more than one value type: \\n\" )\n",
-        "  print('\\n'.join(warn_props) + '\\n\\n')\n",
         "\n",
         "print( \"These are the user properties that appear in the data: \\n\" )\n",
-        "for event in event_list:\n",
-        "  print (event +'\\n')\n",
-        "  print (user_props[event].loc[:, ['key','value_types']])\n",
-        "  print ('\\n')\n",
+        "for event in list(user_props.keys()):  # Iterate over a copy of keys to allow modification\n",
+        "  if user_props[event].empty or user_props[event]['value_types'].isnull().all():\n",
+        "    del user_props[event]  # Remove empty or valueless DataFrames\n",
+        "\n",
+        "  if event in user_props: # Check if key exists before printing\n",
+        "    print (event +'\\n')\n",
+        "    print (user_props[event].loc[:, ['key','value_types']])\n",
+        "    print ('\\n')\n",
         "\n",
         "\n"
       ]
