user property output

--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -37,22 +37,22 @@
         "id": "QcZZ3I5M3y1I",
         "outputId": "291498b6-5f39-47aa-aea2-e1a013620c61"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Authenticated\n",
-            "The google.colab.data_table extension is already loaded. To reload it, use:\n",
-            "  %reload_ext google.colab.data_table\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from google.colab import auth\n",
         "auth.authenticate_user()\n",
         "print('Authenticated')\n",
-        "%load_ext google.colab.data_table"
+        "%load_ext google.colab.data_table\n",
+        "\n",
+        "import gspread\n",
+        "from google.auth import default\n",
+        "creds, _ = default()\n",
+        "\n",
+        "gc = gspread.authorize(creds)\n",
+        "try:\n",
+        "  sh = gc.open(source_project +':' + source_dataset + ':' + source_table)\n",
+        "except gspread.exceptions.SpreadsheetNotFound: \n",
+        "  sh = gc.create(source_project +':' + source_dataset + ':' + source_table)"
       ]
     },
     {
@@ -141,9 +141,7 @@
         "  cross join\n",
         "    unnest(user_properties) up\n",
         "  group by up.key;\n",
-        "  '''.format(sp=source_project, sd=source_dataset, st=source_table) ).to_dataframe()\n",
-        "\n",
-        "user_props"
+        "  '''.format(sp=source_project, sd=source_dataset, st=source_table) ).to_dataframe()\n"
       ]
     },
     {
@@ -197,23 +195,21 @@
         "    universal_params.append(param)\n",
         "\n",
         "\n",
-        "for event in event_list:\n",
-        "  for prop in user_props[event].key:\n",
-        "    for index, row in user_props[event].iterrows():\n",
-        "      matched_props = []\n",
-        "      if row['string_values'] > 0:\n",
-        "        matched_props.append('string_value')\n",
-        "      if row['int_values'] > 0:\n",
-        "        matched_props.append('int_value')\n",
-        "      if row['float_values'] > 0:\n",
-        "        matched_props.append('float_value')\n",
-        "      if row['double_values'] > 0:\n",
-        "        matched_props.append('double_value')\n",
-        "      if len(matched_props) > 1:\n",
-        "        warn_props.append( event + \": \" + prop )\n",
-        "      user_props[event].loc[index, 'value_types'] = ', '.join(matched_props)\n",
+        "for index, row in user_props.iterrows():\n",
+        "  matched_props = []\n",
+        "  if row['string_values'] > 0:\n",
+        "    matched_props.append('string_value')\n",
+        "  if row['int_values'] > 0:\n",
+        "    matched_props.append('int_value')\n",
+        "  if row['float_values'] > 0:\n",
+        "    matched_props.append('float_value')\n",
+        "  if row['double_values'] > 0:\n",
+        "    matched_props.append('double_value')\n",
+        "  if len(matched_props) > 1:\n",
+        "    warn_props.append( event + \": \" + prop )\n",
+        "  user_props.loc[index, 'value_types'] = ', '.join(matched_props)\n",
         "\n",
-        "      prop_set.add(row.key)\n"
+        "  prop_set.add(row.key)\n"
       ]
     },
     {
@@ -224,8 +220,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "if len(universal_params) > 0:\n",
         "  print( \"The following event parameters appear in at least \" + format(threshold, \".0%\") + \" of events. Consider implementing these as default custom parameters. \\n\" )\n",
         "  print( \"Please note that the parameters that are implemented by default in GA4 on all events, like page_location, are not removed from this list. \\n\" )\n",
@@ -252,28 +246,13 @@
         "\n",
         "\n",
         "print( \"These are the user properties that appear in the data: \\n\" )\n",
-        "for event in list(user_props.keys()):  # Iterate over a copy of keys to allow modification\n",
-        "  if user_props[event].empty or user_props[event]['value_types'].isnull().all():\n",
-        "    del user_props[event]  # Remove empty or valueless DataFrames\n",
         "\n",
-        "  if event in user_props: # Check if key exists before printing\n",
-        "    print (event +'\\n')\n",
-        "    print (user_props[event].loc[:, ['key','value_types']])\n",
-        "    print ('\\n')\n",
-        "    try:\n",
-        "      worksheet = sh.worksheet(\"user_props\")\n",
-        "    except gspread.exceptions.WorksheetNotFound:\n",
-        "      worksheet = sh.add_worksheet(title=\"user_props\", rows=len(user_props[event].index)+2, cols=len(user_props[event].columns))\n",
-        "    worksheet.update([user_props[event].columns.values.tolist()] + user_props[event].values.tolist())\n",
-        "\n",
-        "ss = gc.open_by_url(spreadsheet)\n",
+        "print (user_props.loc[:, ['key','value_types']])\n",
         "try:\n",
-        "    ws = ss.worksheet(source_dataset)\n",
-        "except:\n",
-        "    ws = ss.add_worksheet(title=source_dataset, rows='1', cols ='1')\n",
-        "set_with_dataframe(ws, event_params )\n",
-        "#restore the header text\n",
-        "ws.update('A1', source_dataset)"
+        "  worksheet = sh.worksheet(\"user_props\")\n",
+        "except gspread.exceptions.WorksheetNotFound:\n",
+        "  worksheet = sh.add_worksheet(title=\"user_props\", rows=len(user_props.index)+2, cols=len(user_props.columns))\n",
+        "worksheet.update([user_props.columns.values.tolist()] + user_props.values.tolist())"
       ]
     }
   ],
