--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -93,8 +93,7 @@
         "  exclude_list = [f\"'{param}'\" for param in exclude_parameters.split(', ')]\n",
         "  event_params[event] = client.query('''\n",
         "    select\n",
-        "      event_name\n",
-        "      , ep.key\n",
+        "      ep.key\n",
         "      , count(ep.value.string_value) as string_values\n",
         "      , count(ep.value.int_value) as int_values\n",
         "      , count(ep.value.float_value) as float_values\n",
