fix copy-paste error

--- a/extract_ga4_event_params_bigquery.ipynb
+++ b/extract_ga4_event_params_bigquery.ipynb
@@ -231,146 +231,7 @@
         "except gspread.exceptions.WorksheetNotFound:\n",
         "  worksheet = sh.add_worksheet(title=\"user_props\", rows=len(user_props.index)+2, cols=len(user_props.columns))\n",
         "worksheet.update([user_props.columns.values.tolist()] + user_props.values.tolist())\n",
-        "\n",
-        "\n",
-        "# Function to determine the most common value type\n",
-        "def get_most_common_value_type(row):\n",
-        "    value_types = []\n",
-        "    counts = []\n",
-        "    \n",
-        "    if row['string_values'] > 0:\n",
-        "        value_types.append('string_value')\n",
-        "        counts.append(row['string_values'])\n",
-        "    if row['int_values'] > 0:\n",
-        "        value_types.append('int_value')\n",
-        "        counts.append(row['int_values'])\n",
-        "    if row['float_values'] > 0:\n",
-        "        value_types.append('float_value')\n",
-        "        counts.append(row['float_values'])\n",
-        "    if row['double_values'] > 0:\n",
-        "        value_types.append('double_value')\n",
-        "        counts.append(row['double_values'])\n",
-        "    \n",
-        "    if not value_types:\n",
-        "        return \"\"\n",
-        "    \n",
-        "    # Return the value type with the highest count\n",
-        "    return value_types[counts.index(max(counts))]\n",
-        "\n",
-        "# Create a dictionary to store parameters with multiple value types\n",
-        "multiple_value_types = {}\n",
-        "\n",
-        "# Process event parameters to identify most common value types\n",
-        "for event in event_list:\n",
-        "    for index, row in event_params[event].iterrows():\n",
-        "        if ',' in row['value_types']:  # Multiple value types detected\n",
-        "            most_common = get_most_common_value_type(row)\n",
-        "            event_params[event].loc[index, 'most_common_type'] = most_common\n",
-        "            \n",
-        "            # Store for warning message\n",
-        "            if event not in multiple_value_types:\n",
-        "                multiple_value_types[event] = []\n",
-        "            multiple_value_types[event].append((row['key'], row['value_types'], most_common))\n",
-        "        else:\n",
-        "            event_params[event].loc[index, 'most_common_type'] = row['value_types']\n",
-        "\n",
-        "print(\"The following event parameters appear in at least \" + format(threshold, \".0%\") + \" of events. Consider implementing these as default custom parameters. \\n\")\n",
-        "print(\"Please note that the parameters that are implemented by default in GA4 on all events, like page_location, are not removed from this list. \\n\")\n",
-        "print(\"You do not need to register default parameters. \\n\")\n",
-        "print('\\n '.join(universal_params) + '\\n\\n')\n",
-        "\n",
-        "# Print universal parameters in dbt-GA4 format\n",
-        "print(\"# Universal Parameters (found in at least \" + format(threshold, \".0%\") + \" of events)\")\n",
-        "print(\"vars:\")\n",
-        "print(\"  ga4:\")\n",
-        "print(\"    universal_custom_parameters:\")\n",
-        "for param in sorted(universal_params):\n",
-        "    # Find this parameter in any event to get its type\n",
-        "    param_type = \"\"\n",
-        "    for event in event_list:\n",
-        "        param_row = event_params[event][event_params[event]['key'] == param]\n",
-        "        if not param_row.empty:\n",
-        "            if 'most_common_type' in param_row.columns:\n",
-        "                param_type = param_row['most_common_type'].values[0]\n",
-        "            else:\n",
-        "                param_type = param_row['value_types'].values[0]\n",
-        "            break\n",
-        "    \n",
-        "    print(f'      - name: \"{param}\"')\n",
-        "    print(f'        value_type: {param_type}')\n",
-        "\n",
-        "print(\"\\n# Event-specific Parameters\")\n",
-        "print(\"vars:\")\n",
-        "print(\"  ga4:\")\n",
-        "\n",
-        "# Sort events alphabetically\n",
-        "for event in sorted(event_list):\n",
-        "    # Skip if no parameters\n",
-        "    if event_params[event].empty:\n",
-        "        continue\n",
-        "        \n",
-        "    print(f\"    {event}_custom_parameters:\")\n",
-        "    \n",
-        "    # Sort parameters alphabetically by key\n",
-        "    sorted_params = event_params[event].sort_values('key')\n",
-        "    \n",
-        "    for index, row in sorted_params.iterrows():\n",
-        "        param_name = row['key']\n",
-        "        \n",
-        "        # Skip universal parameters as they're already defined\n",
-        "        if param_name in universal_params:\n",
-        "            continue\n",
-        "            \n",
-        "        value_type = row['most_common_type'] if 'most_common_type' in row else row['value_types']\n",
-        "        \n",
-        "        print(f'      - name: \"{param_name}\"')\n",
-        "        print(f'        value_type: {value_type}')\n",
-        "        \n",
-        "        # Add warning comment if multiple value types detected\n",
-        "        if ',' in row['value_types']:\n",
-        "            print(f'        # WARNING: Multiple value types detected ({row[\"value_types\"]}). Using most common: {value_type}')\n",
-        "\n",
-        "print(\"\\n# User Properties\")\n",
-        "print(\"vars:\")\n",
-        "print(\"  ga4:\")\n",
-        "print(\"    user_properties:\")\n",
-        "\n",
-        "# Collect all unique user properties across events\n",
-        "all_user_props = {}\n",
-        "for event in user_props:\n",
-        "    if user_props[event].empty or user_props[event]['value_types'].isnull().all():\n",
-        "        continue\n",
-        "        \n",
-        "    for index, row in user_props[event].iterrows():\n",
-        "        prop_name = row['key']\n",
-        "        if prop_name not in all_user_props:\n",
-        "            # Determine most common value type\n",
-        "            most_common = get_most_common_value_type(row)\n",
-        "            all_user_props[prop_name] = {\n",
-        "                'value_types': row['value_types'],\n",
-        "                'most_common': most_common\n",
-        "            }\n",
-        "\n",
-        "# Print user properties in alphabetical order\n",
-        "for prop_name in sorted(all_user_props.keys()):\n",
-        "    prop_info = all_user_props[prop_name]\n",
-        "    print(f'      - name: \"{prop_name}\"')\n",
-        "    print(f'        value_type: {prop_info[\"most_common\"]}')\n",
-        "    \n",
-        "    # Add warning comment if multiple value types detected\n",
-        "    if ',' in prop_info['value_types']:\n",
-        "        print(f'        # WARNING: Multiple value types detected ({prop_info[\"value_types\"]}). Using most common: {prop_info[\"most_common\"]}')\n",
-        "\n",
-        "# Print summary of parameters with multiple value types\n",
-        "if multiple_value_types:\n",
-        "    print(\"\\n# WARNING: The following parameters have multiple value types and should be fixed at the source:\")\n",
-        "    for event in sorted(multiple_value_types.keys()):\n",
-        "        print(f\"\\n## Event: {event}\")\n",
-        "        for param_info in sorted(multiple_value_types[event], key=lambda x: x[0]):\n",
-        "            param_name, value_types, most_common = param_info\n",
-        "            print(f\"  - Parameter: {param_name}\")\n",
-        "            print(f\"    Found types: {value_types}\")\n",
-        "            print(f\"    Using: {most_common}\")\n"
+        "\n"
       ]
     },
     {
@@ -454,6 +315,7 @@
         "    print(f'        value_type: {param_type}')\n",
         "\n",
         "print(\"\\n# Event-specific Parameters\")\n",
+        "print(\"\\Empty events are left for reference but will be need to be deleted for dbt to validate\")\n",
         "print(\"vars:\")\n",
         "print(\"  ga4:\")\n",
         "\n",
